LegalEmpireToOG: avoid stack overflow in getGhostUpdateTerm